--- a/DesignPatterns/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns/DesignPatterns.csproj
@@ -204,6 +204,8 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Pattern\GangOfFour\Structural\Adapter.cs" />
+    <Compile Include="Pattern\SOLID.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -269,6 +271,8 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Pattern\GangOfFour\Behavioral\" />
+    <Folder Include="Pattern\GangOfFour\Creational\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
