--- a/DesignPatterns/DesignPatterns/DesignPatterns.csproj
+++ b/DesignPatterns/DesignPatterns/DesignPatterns.csproj
@@ -226,6 +226,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Pattern\js.js" />
     <Content Include="Scripts\ai.0.22.19-build00125.js" />
     <Content Include="Scripts\ai.0.22.19-build00125.min.js" />
     <Content Include="Scripts\bootstrap.js" />
